--- a/print.html
+++ b/print.html
@@ -1388,10 +1388,10 @@ lower_bounds
 因此没有任何优化的暴力搜索只能解决非常简单(地图尺寸小, 箱子数量少)的关卡, 如果希望解决更复杂的关卡则需要对求解器进行优化.</p>
 <p>本文所描述的求解器将使用以下优化手段:</p>
 <ul>
-<li>启发式搜索(Heuristic search): 使用启发式搜索算法, 通过引入启发式函数来指导搜索方向.</li>
-<li>剪枝(Pruning): 借助<a href="solver/deadlocks.html">死锁</a>检测, 我们能够有效地剪去部分不可能导致解的情况, 减少搜索空间.</li>
-<li>记忆化搜索(Memoization): 防止搜索过程中重复搜索相同节点, 或陷入图里的环.</li>
-<li>预处理(Preprocessing): 预计算下界, 在之后的搜索过程中可以直接取用, 避免反复计算下界.</li>
+<li><strong>启发式搜索(Heuristic search)</strong>: 使用启发式搜索算法, 通过引入启发式函数来指导搜索方向.</li>
+<li><strong>剪枝(Pruning)</strong>: 借助<a href="solver/deadlocks.html">死锁</a>检测, 我们能够有效地剪去部分不可能导致解的情况, 减少搜索空间.</li>
+<li><strong>记忆化搜索(Memoization)</strong>: 防止搜索过程中重复搜索相同节点, 或陷入图里的环.</li>
+<li><strong>预处理(Preprocessing)</strong>: 预计算下界, 在之后的搜索过程中可以直接取用, 避免反复计算下界.</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="死锁deadlock"><a class="header" href="#死锁deadlock">死锁(Deadlock)</a></h1>
