--- a/print.html
+++ b/print.html
@@ -213,7 +213,7 @@
 <p>推箱子的实现<strong>既可以简单也可以复杂</strong>, 读者可以根据自身的情况选择学习的深度.</p>
 <h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
 <ul>
-<li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
+<li>具备 Rust 语言的语法基础, 或熟悉一门命令式编程语言.</li>
 <li>有关高级功能和求解器的章节: 具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
 </ul>
 <h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
@@ -222,7 +222,7 @@
 <ul>
 <li>Rust 语言本身: 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
 <li>游戏引擎: 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
-<li>推箱子的其他变体(Variant)<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
+<li>推箱子的其他变体<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
 </ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
 <p>完整的项目代码位于:</p>
