deploy: 8a1f3e28d4e4b25f201fdaa88e36b5ea61879150

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <ul>
 <li>Rust 语言本身: 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
 <li>游戏引擎: 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
-<li>推箱子的其他变体<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
+<li>其他推箱子变体<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
 </ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
 <p>完整的项目代码位于:</p>
